--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#sobre" class="text-gray-600 hover:accent-color transition-colors duration-300">Sobre</a>
                 <a href="#experiencia" class="text-gray-600 hover:accent-color transition-colors duration-300">Experiência</a>
-                <a href="#projetos" class="text-gray-600 hover:accent-color transition-colors duration-300">Projetos</a>
                 <a href="#habilidades" class="text-gray-600 hover:accent-color transition-colors duration-300">Habilidades</a>
                 <a href="#contato" class="bg-accent-color text-white px-4 py-2 rounded-md hover:opacity-90 transition-opacity duration-300">Contato</a>
             </div>
@@ -40,7 +39,6 @@
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
             <a href="#sobre" class="block py-2 text-gray-600 hover:accent-color">Sobre</a>
             <a href="#experiencia" class="block py-2 text-gray-600 hover:accent-color">Experiência</a>
-            <a href="#projetos" class="block py-2 text-gray-600 hover:accent-color">Projetos</a>
             <a href="#habilidades" class="block py-2 text-gray-600 hover:accent-color">Habilidades</a>
             <a href="#contato" class="block mt-2 bg-accent-color text-white text-center px-4 py-2 rounded-md hover:opacity-90">Contato</a>
         </div>
@@ -60,18 +58,14 @@
             >
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Olá, eu sou Matheus Vian Stoco</h1>
             <p class="text-xl md:text-2xl text-gray-600 mb-8">Estudante de Engenharia de Software</p>
-            <div class="flex justify-center items-center space-x-4">
-                <!-- ADICIONE AQUI O LINK REAL PARA SEU LINKEDIN -->
-                <a href="#" target="_blank" class="text-gray-600 hover:accent-color transition-colors duration-300" aria-label="LinkedIn">
+            <div class="flex justify-center items-center space-x-6">
+                <!-- LINK DO LINKEDIN ATUALIZADO -->
+                <a href="https://www.linkedin.com/in/matheus-stoco" target="_blank" class="text-gray-600 hover:accent-color transition-colors duration-300" aria-label="LinkedIn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
                 </a>
-                <!-- ADICIONE AQUI O LINK REAL PARA SEU GITHUB -->
-                <a href="#" target="_blank" class="text-gray-600 hover:accent-color transition-colors duration-300" aria-label="GitHub">
+                <!-- LINK DO GITHUB ATUALIZADO -->
+                <a href="https://github.com/MatheusStoco" target="_blank" class="text-gray-600 hover:accent-color transition-colors duration-300" aria-label="GitHub">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-4.3 1.4-4.3-2.5-6-3m12 5v-3.5c0-1 .1-1.4-.5-2 2.8-.3 5.5-1.4 5.5-6.1a4.6 4.6 0 0 0-1.3-3.2 4.2 4.2 0 0 0-.1-3.2s-1.1-.3-3.5 1.3a12.3 12.3 0 0 0-6.2 0C6.5 2.8 5.4 3.1 5.4 3.1a4.2 4.2 0 0 0-.1 3.2A4.6 4.6 0 0 0 4 9.5c0 4.7 2.7 5.8 5.5 6.1-.6.5-.9 1.4-.9 2.8v3.5"/></svg>
-                </a>
-                <!-- ADICIONE AQUI O LINK PARA SEU CURRÍCULO EM PDF -->
-                <a href="#" target="_blank" class="ml-4 border border-accent-color accent-color px-6 py-3 rounded-lg font-medium hover:bg-accent-color hover:text-white transition-colors duration-300">
-                    Ver Currículo
                 </a>
             </div>
         </section>
@@ -115,53 +109,6 @@
                     </div>
                     <p class="mt-4 text-gray-600">Principais atividades: Controle e ajuste dos pontos dos colaboradores, auxílio à supervisora em atividades administrativas e elaboração de planilhas.</p>
                 </div>
-            </div>
-        </section>
-
-
-        <!-- ========== SEÇÃO PROJETOS ========== -->
-        <section id="projetos" class="my-24 md:my-32">
-            <h2 class="text-3xl font-bold text-center mb-12">Meus Projetos</h2>
-            <p class="text-center max-w-2xl mx-auto text-gray-600 mb-12">
-                <!-- MENSAGEM PARA VOCÊ -->
-                Esta seção está pronta para você adicionar seus projetos da faculdade ou pessoais. Descreva o que cada um faz, as tecnologias que usou e adicione links para o GitHub e para uma demonstração ao vivo, se houver.
-            </p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                
-                <!-- PROJETO 1: Altere as informações abaixo -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/e2e8f0/cbd5e0?text=Seu+Projeto+Aqui" alt="Imagem do Projeto 1" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Nome do Projeto 1</h3>
-                        <p class="text-gray-600 mb-4">Breve descrição do que o projeto faz, seus objetivos e o resultado final.</p>
-                        <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Tecnologia 1</span>
-                            <span class="bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Tecnologia 2</span>
-                        </div>
-                        <div class="flex justify-end space-x-4">
-                            <a href="#" target="_blank" class="text-gray-600 hover:accent-color font-medium">Ver Demo</a>
-                            <a href="#" target="_blank" class="text-gray-600 hover:accent-color font-medium">GitHub</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- PROJETO 2: Adicione mais projetos copiando o bloco acima -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/e2e8f0/cbd5e0?text=Seu+Projeto+Aqui" alt="Imagem do Projeto 2" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Nome do Projeto 2</h3>
-                        <p class="text-gray-600 mb-4">Breve descrição do que o projeto faz, seus objetivos e o resultado final.</p>
-                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-red-100 text-red-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Tecnologia 1</span>
-                            <span class="bg-purple-100 text-purple-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Tecnologia 2</span>
-                        </div>
-                        <div class="flex justify-end space-x-4">
-                            <a href="#" target="_blank" class="text-gray-600 hover:accent-color font-medium">Ver Demo</a>
-                            <a href="#" target="_blank" class="text-gray-600 hover:accent-color font-medium">GitHub</a>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </section>
         
@@ -211,7 +158,7 @@
     <!-- ========== FOOTER ========== -->
     <footer class="bg-gray-100 border-t border-gray-200">
         <div class="container mx-auto px-6 py-6 text-center text-gray-600">
-            <p>&copy; 2024 Matheus Vian Stoco. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Matheus Vian Stoco. Todos os direitos reservados.</p>
         </div>
     </footer>
 
