--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio de Matheus Vian Stoco</title>
 
+    <!-- Ícone do Site (Favicon) -->
+    <link rel="icon" href="img/icon.png" type="image/png">
+
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
